<resources>
    <string name="app_name">Me voy deviaje</string>
    <string name="tv_destino">Destino:</string>
    <string name="tv_transporte">Transporte:</string>
    <string name="rb_primerDestino">París</string>
    <string name="rb_segundoDestino">Londres</string>
    <string name="rb_tercerDestino">Roma</string>
    <string name="rb_primerTransporte">Coche</string>
    <string name="rb_segundoTransporte">Tren</string>
    <string name="rb_tercerTransporte">Avión</string>
    <string name="btn_info">Información</string>
</resources>