<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/LayoutDestino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_Destino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_destino"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rg_destino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="30dp">

            <RadioButton
                android:id="@+id/rb_Primer_Destino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_primerDestino" />

            <RadioButton
                android:id="@+id/rb_Segundo_Destino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_segundoDestino" />

            <RadioButton
                android:id="@+id/rb_Tercer_Destino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_tercerDestino" />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LayoutTransporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_Transporte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_transporte"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rg_transporte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="30dp">

            <RadioButton
                android:id="@+id/rb_Primer_Transporte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_primerTransporte" />

            <RadioButton
                android:id="@+id/rb_Segundo_Transporte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_segundoTransporte" />

            <RadioButton
                android:id="@+id/rb_Tercer_Transporte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_tercerTransporte" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/btn_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/btn_info"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_info"
        app:cornerRadius="20dp" />
</LinearLayout>